syntax = "proto3";

package shared.events.events_proto;
option go_package = "github.com/mennanov/scalemate/shared/events_proto";

import "google/protobuf/timestamp.proto";

import "accounts/accounts_proto/accounts.proto";
import "billing/billing_proto/billing.proto";
import "scheduler/scheduler_proto/scheduler.proto";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// Event represents a global domain event across all the services.
message Event {
    oneof payload {
        accounts.accounts_proto.UserCreatedEvent accounts_user_created = 2;
        accounts.accounts_proto.UserPasswordChangedEvent accounts_user_password_changed = 3;
        scheduler.scheduler_proto.ContainerCreatedEvent scheduler_container_created = 4;
        scheduler.scheduler_proto.ContainerScheduledEvent scheduler_container_scheduled = 5;
        scheduler.scheduler_proto.ResourceRequestCreated scheduler_resource_request_created = 6;
        scheduler.scheduler_proto.ResourceRequestStatusChanged scheduler_resource_request_status_changed = 7;
        scheduler.scheduler_proto.NodePricingCreatedEvent scheduler_node_pricing_created = 8;
        scheduler.scheduler_proto.NodeCreatedEvent scheduler_node_created = 9;
    }
    google.protobuf.Timestamp created_at = 1 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// Message is the actual message sent to a message broker that encapsulates multiple Events.
message Message {
    repeated Event events = 1;
}
